[project]
name = "prkknot"
version = "0.1.3"
description = "Flex-Knot reconstruction of dark energy PR(k), for use with Cobaya"
authors = [{name="Adam Neil Ormondroyd", email="Adam.Ormondroyd@gmail.com"}]
readme = "README.md"
dependencies = ["numpy", "cobaya", "flexknot@git+ssh://github.com/Ormorod/flexknot@main", "anesthetic", "fgivenx"]

[project.urls]
repository = "https://github.com/Ormorod/prkknot"

[project.optional-dependencies]
dev = ["black"]
