[project]
name = "prkknot"
version = "0.2.0"
description = "Flex-Knot reconstruction of dark energy PR(k), for use with Cobaya"
authors = [{name="Adam Neil Ormondroyd", email="Adam.Ormondroyd@gmail.com"}]
readme = "README.md"
dependencies = ["numpy", "cobaya", "flexknot", "anesthetic", "fgivenx"]

[project.urls]
repository = "https://github.com/adamormondroyd/prkknot"

[project.optional-dependencies]
dev = ["black"]
